--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -23,3 +23,5 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: pytest
+      - name: Run Bandit Security Scan
+        run: bandit -r src/
